--- a/05-calculator/styles/styles.css
+++ b/05-calculator/styles/styles.css
@@ -10,6 +10,7 @@
 
   --white: #ebebeb;
   --gray: #2d2a37;
+  --mid-gray: #424242;
   --light-gray: #6b6b6b;
   --background: linear-gradient(to left, #807ece, #8e7ece);
   --purple: #7f45e2;
@@ -18,6 +19,20 @@
   --error: #ef4444;
 
   --display-scale: 1;
+}
+
+/* utility classes */
+/* estilização para screen readers para indicar o input de range */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 
 button {
@@ -36,8 +51,9 @@ body {
 }
 
 .calculator {
-  background-color: var(--gray);
-  padding: 5.4rem 3.2rem 3.2rem 3.2rem;
+  background: linear-gradient(rgba(255, 255, 255, 0.05), rgba(0, 0, 0, 0.05)),
+    var(--gray);
+  padding: 3.2rem;
   border-radius: 4.8rem;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25),
     0px 188px 52px 0px rgba(0, 0, 0, 0.01),
@@ -47,6 +63,10 @@ body {
     inset 0px 6px 8px 0px rgba(255, 255, 255, 0.1),
     inset 0px -4px 5px 0px rgba(0, 0, 0, 0.22);
 
+  display: flex;
+}
+
+.main-calculator {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -121,6 +141,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.8rem;
+  border-bottom: 1px solid var(--mid-gray);
 }
 
 .history {
@@ -159,4 +180,143 @@ body {
 
 .result .number.error {
   color: var(--error);
+}
+
+.extra-buttons {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  margin-bottom: 1.6rem;
+}
+
+.second-calculator {
+  overflow: hidden;
+  /* transition: max-width 0.3s ease-in-out; */
+  max-width: 0;
+  color: var(--white);
+  border-left: 1px solid var(--mid-gray);
+  padding: 3.2rem;
+  margin-left: 1.6rem;
+}
+
+.second-calculator strong,
+.second-calculator h2 {
+  font-weight: 500;
+}
+
+.second-calculator h2 {
+  font-size: 2rem;
+  margin-bottom: 0.8rem;
+}
+.second-calculator h3 {
+  font-size: 1.8rem;
+  margin-bottom: 0.8rem;
+}
+
+.second-calculator:not(.hidden) p {
+  width: 32rem;
+  font-size: 1.4rem;
+}
+
+/* algorthym illustration */
+.shunting-yard-container {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+span.op {
+  width: 2rem;
+  padding: 0.5rem;
+  height: 2rem;
+  min-height: 2rem;
+  min-width: 2rem;
+  border: 1px solid var(--purple);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  border-radius: 0.4rem;
+  font-size: 1.2rem;
+  background: linear-gradient(#424242, #2d2a37);
+  overflow: hidden;
+}
+
+.stack-container {
+  width: 50%;
+  border-right: 2px solid var(--light-purple);
+  display: flex;
+  justify-content: flex-end;
+  height: 10rem;
+  padding: 0.4rem;
+  max-height: 15rem;
+  overflow-y: auto;
+}
+
+.stack-container .label {
+  position: absolute;
+  left: 2rem;
+  bottom: 3.2rem;
+  font-size: 1.4rem;
+}
+
+.input-output-container {
+  position: relative;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  border-bottom: 2px solid var(--light-purple);
+  height: 6.4rem;
+  align-items: flex-end;
+  padding: 0.4rem;
+}
+
+.number-output,
+.number-input {
+  display: flex;
+  gap: 0.2rem;
+  width: 15rem;
+  max-width: 15rem;
+  overflow-x: auto;
+}
+
+.number-output {
+  justify-content: flex-start;
+}
+
+.number-input {
+  justify-content: flex-end;
+}
+
+.input-output-container .direction {
+  position: absolute;
+  top: -0.8rem;
+  left: calc(50% - 1.6rem);
+  font-size: 2.4rem;
+  width: 3.2rem;
+  height: 3.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input-output-container .label {
+  position: absolute;
+  font-size: 1.4rem;
+  top: 0;
+}
+
+.input-output-container .label.output {
+  left: 20%;
+}
+
+.input-output-container .label.input {
+  right: 20%;
+}
+
+.number-stack {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
 }
